<resources>
    <string name="app_name">RentzGo</string>
    <string name="title_activity_houses_lists">HousesLists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">this header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_demo">demo</string>
    <string name="title_activity_demo1">Demo1</string>
    <string name="title_activity_demo11">Demo1Activity1</string>
    <string name="title_activity_demo111">Demo11Activity1</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_myAds">My Ads</string>
    <string name="title_doPost">Rent</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile"><u>Edit Profile</u></string>


    <string-array name="Houses">
        <item>Individual Rooms</item>
        <item>PGs</item>
        <item>Hostels</item>
        <item>Flats</item>
        <item>Houses/Villas</item>
    </string-array>


    <string-array name="furnishing">
        <item>Fully Furnished</item>
        <item>Semi Furnished</item>
        <item>Unfurnished</item>
    </string-array>

    <string-array name="facing">
        <item>East</item>
        <item>West</item>
        <item>North</item>
        <item>South</item>
        <item>North-East</item>
        <item>south-East</item>
        <item>North-west</item>
        <item>south-west</item>
    </string-array>

    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="parking_facility">
        <item>Car</item>
        <item>Bike</item>
    </string-array>

</resources>