<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>


    <item
        android:id="@+id/navigation_myads"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_myAds" />

    <item
        android:id="@+id/navigation_doPost"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/title_doPost"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account_circle"
        android:title="@string/title_profile" />

</menu>